--- a/ui.html
+++ b/ui.html
@@ -8,15 +8,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="bg-gray-100">
     <div class="mx-auto flex flex-col max-w-screen-lg my-20">
         <div class="m-10 lg:m-20">
             <h3 class="mb-8 text-2xl font-medium text-center">Fake news detection with machine learning</h3>
-            <textarea id="news" rows="4" class="p-4 w-full rounded-md bg-gray-50 outline-black font-light"
+            <textarea id="news" rows="4" class="p-4 w-full rounded-md border-black border outline-black font-light"
                 placeholder="Input news to analyze ..."></textarea>
             <div class="flex flex-row w-full justify-end">
                 <button id="submit-btn"
-                    class="w-full py-2 border bg-gray-600 rounded-md hover:bg-gray-800 text-white mt-6">
+                    class="w-full py-2 border bg-gray-800 rounded-md hover:bg-black text-white mt-6">
                     Detect
                 </button>
             </div>
