--- a/ui.html
+++ b/ui.html
@@ -11,13 +11,14 @@
 <body class="bg-gray-100">
     <div class="mx-auto flex flex-col max-w-screen-lg my-20">
         <div class="m-10 lg:m-20">
-            <h3 class="mb-8 text-2xl font-medium text-center">Fake news detection with machine learning</h3>
-            <textarea id="news" rows="4" class="p-4 w-full rounded-md border-black border outline-black font-light"
-                placeholder="Input news to analyze ..."></textarea>
+            <h3 class="mb-8 text-2xl font-medium text-center">Fake News Detection with Machine Learning</h3>
+            <textarea id="news" rows="5"
+                class="p-4 w-full rounded-md border border-black outline-none font-light text-black resize-none"
+                placeholder="input news to analyze ..."></textarea>
             <div class="flex flex-row w-full justify-end">
                 <button id="submit-btn"
-                    class="w-full py-2 border bg-gray-800 rounded-md hover:bg-black text-white mt-6">
-                    Detect
+                    class="w-full py-1.5 rounded-md text-white mt-6 bg-zinc-800 hover:bg-black tracking-wide font-light">
+                    Predict
                 </button>
             </div>
 
